--- a/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.detail.html
@@ -1,8 +1,8 @@
-<div class="uk-height-1-2">
+<div class="uk-width-1-1">
     <h3>NOMBRE: </h3>{{currentRecord.nombre}}
 
     <h3>MEDICAMENTOS</h3>
-    <table class="table table-condensed">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
         <thead>
             <tr>
                 <th>NOMBRE</th>
