--- a/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.map.html
+++ b/especialistas-web/src/main/webapp/src/modules/hospitales/hospitales.map.html
@@ -1,11 +1,9 @@
-<alert class="alert alert-danger" ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div id="map_canvas" >
+<div id="map_canvas" class="width-1-1@s">
         <style type="text/css">
         ui-gmap-google-map,#map_canvas {
-            height: 200px;
-            width: 200px;
-            margin: 0;
-            margin-top: 70px;
+            height: 300px;
+            width: 100%;
+            margin: 0px;
         }
 
         #map_canvas {
