--- a/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.map.html
+++ b/especialistas-web/src/main/webapp/src/modules/farmacias/detail/farmacias.map.html
@@ -1,11 +1,9 @@
-<alert class="alert alert-danger" ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div id="map_canvas">
+<div id="map_canvas" class="width-1-1@s">
         <style type="text/css">
         ui-gmap-google-map,#map_canvas {
             height: 300px;
-            width: 300px;
-            margin: 300px;
-            margin-top: 200px;
+            width: 100%;
+            margin: 0px;
         }
 
         #map_canvas {
@@ -21,7 +19,7 @@
         }
     </style>
     <ui-gmap-google-map style="" center="map.center" zoom="map.zoom" draggable="true" options="options">
-        <ui-gmap-markers models="randomMarkers" coords="'self'" icon="'icon'"></ui-gmap-markers>
-        <ui-gmap-circle ng-repeat="c in circles track by c.id" center="c.center" stroke="c.stroke" fill="c.fill" radius="c.radius" visible="c.visible" geodesic="c.geodesic"></ui-gmap-circle>        
+    <ui-gmap-markers models="randomMarkers" coords="'self'" icon="'icon'"></ui-gmap-markers>
+    <ui-gmap-circle ng-repeat="c in circles track by c.id" center="c.center" stroke="c.stroke" fill="c.fill" radius="c.radius" visible="c.visible" geodesic="c.geodesic"></ui-gmap-circle>        
     </ui-gmap-google-map>
 </div>
