--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -17,6 +17,7 @@
         <script src="bower_components/angular/angular.js"></script>
         <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+        <script src="bower_components/angular-breadcrumb/dist/angular-breadcrumb.min.js"></script>
 
         <!-- Medicos -->
         <script src="src/modules/medicos/medicos.mod.js" type="text/javascript"></script>
@@ -142,13 +143,13 @@
             <h1 class="uk-width-1-6@xl uk-width-1-5@l">ASANAR</h1>
         </div>
         <div  ui-view="all">       
-
+            <div class="ocul"></div>
 
             <!--BARRA SUPERIOR-->
             <div id="barra-sup">
                 <h1 class="uk-width-1-6@xl uk-width-1-5@l">ASANAR</h1>
                 <div class="imgm">
-                    Usuario X &nbsp;&nbsp;
+                    Usuario {{idUser}} &nbsp;&nbsp;
                     <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 1" ui-sref="usuarioDetail ({usuarioId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
                     <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 2" ui-sref="horasList ({medicoId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
                     <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 3" >
@@ -194,8 +195,8 @@
                         <div class="uk-card-body">
                             <h3 class="uk-card-title">ASANAR</h3>
                             <p>Ingresa para.</p>
-                            <select style="color:black; position: absolute;top: 96px; right: 260px;" ng-model="e" id="meds" class="col-sm-6" >
-                                <option  value='med' ng-selected='true'>
+                            <select style="color:black; position: absolute;top: 96px; right: 260px;" ng-model="e" id="meds">
+                                <option  value='med' ng-selected="true" selected="selected">
                                     medico
                                 </option>    
                                 <option  value='usu'>
@@ -238,11 +239,8 @@
             </div>
 
             <!--NAV-->
-            <ul class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l">
-                <li><a href="#">Item</a></li>
-                <li><a href="#">Item</a></li>
-                <li class="uk-disabled"><a href="#">Disabled</a></li>
-                <li><span href="#">Active</span></li>
+            <ul ncy-breadcrumb class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l" ng-show="tipoUser === 1">
+                
             </ul>
 
         </div>
