--- a/especialistas-web/src/main/webapp/src/modules/usuarios/login/index.html
+++ b/especialistas-web/src/main/webapp/src/modules/usuarios/login/index.html
@@ -2,7 +2,7 @@
 <div id="barra-sup">
     <h1 class="uk-width-1-6@xl uk-width-1-5@l">ASANAR</h1>
     <div class="imgm">
-        Usuario X &nbsp;&nbsp;
+        Usuario {{idUser}} &nbsp;&nbsp;
         <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 1" ui-sref="usuarioDetail ({usuarioId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
         <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 2" ui-sref="horasList ({medicoId: idUser})"> <div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
         <img class="uk-border-circle"  src="src/Santa_Fe.PNG" ng-show="tipoUser === 3" ><div uk-dropdown>Tipo Usuario <br><a  ui-sref="logOut"> salir <span uk-icon="icon: sign-out"></span></a></div>
@@ -31,10 +31,4 @@
     </ul>
 </div>
 
-<!--NAV-->
-<ul class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l">
-    <li><a href="#">Item</a></li>
-    <li><a href="#">Item</a></li>
-    <li class="uk-disabled"><a href="#">Disabled</a></li>
-    <li><span href="#">Active</span></li>
-</ul>
+
