--- a/especialistas-web/src/main/webapp/src/modules/pagos/pagos.pagar.html
+++ b/especialistas-web/src/main/webapp/src/modules/pagos/pagos.pagar.html
@@ -9,7 +9,7 @@
   <input name="test"          type="hidden"  value="1" >
   <input name="buyerEmail"    type="hidden"  value="tester33@test.com" >
   <input name="responseUrl"    type="hidden"  value="http://www.test.com/response" >
-  <input name="confirmationUrl"    type="hidden"  value="http://www.test.com/confirmation" >
+  <input name="confirmationUrl"    type="hidden"  value="http://proyectoseneca.esy.es/confirmation.php" >
 
   <input type="submit">
 </form>
