--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.list.html
@@ -19,11 +19,6 @@
                 <a href="#" uk-icon="icon: pencil" style="color: #44b3ee" ui-sref="citasUpdate({citasId: cita.id})"></a>
             </td>
         </tr>
-        <tr>
-            <td>
-                <a ui-sref="citasCreate">Agregar</a>
-            </td>
-        </tr>
     </table>
 </div>
 
@@ -39,7 +34,7 @@
         <th>Domingo</th>
     </tr>
     <tr ng-repeat="franja in franjas">
-        <th>{{franja| date:'h:mm a'}}</th>
+        <th>{{franja| date:'h:mm'}}</th>
         <td id="{franja.$index}-0"><span uk-icon="icon: check" ng-show="hayCita(franja, 0)"></span></td>
         <td id="{franja.$index}-1"><span uk-icon="icon: check" ng-show="hayCita(franja, 1)"></span></td>
         <td id="{franja.$index}-2"><span uk-icon="icon: check" ng-show="hayCita(franja, 2)"></span></td>
