--- a/especialistas-web/src/main/webapp/src/modules/horas/create/horas.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/create/horas.create.html
@@ -5,13 +5,9 @@
             <div class="panel-body">
                 <form ng-submit="createHora()" name="hora">
                     <div class="form-group">
-                        <label for="horaInicio">Hora Inicio</label>
-                        <input type="datetime-local" id="horaInicio" required ng-model="horaInicio" class="form-control uk-input"/>
-                    </div>
-                    <div class="form-group">
                         <label for="consultorioHora">Consultorio</label>
-                        <select class="form-control uk-input" id="consultorioHora" required ng-model="consultorioHora">
-                            <option ng-repeat="consultorio in consultorios" value={{consultorio}}>{{consultorio.numero}}</option>
+                        <select class="form-control uk-input" id="consultorioHora" required ng-model="idHospital">
+                            <option ng-repeat="hospital in hospitales" value={{hospital.id}}>{{hospital.nombre}}</option>
                         </select>
                     </div>
                     <div class="form-group" ng-if="!hora.$valid">
@@ -21,7 +17,7 @@
                     </div> 
                     <br>
                     <div class="uk-button-group">
-                        <button id="cancel" ui-sref="horasList" class="uk-button uk-button-default">Cancelar</button>
+                        <button id="cancel" ui-sref="horasList" class="uk-button uk-button-default">Cancelar</button>   
                         <button ng-show="hora.$valid" class="uk-button uk-button-secondary">Guardar</button>
                     </div>
                 </form>
