--- a/especialistas-web/src/main/webapp/src/modules/horas/horas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/horas.list.html
@@ -1,4 +1,3 @@
-<button type="button" class="uk-button" ui-sref="horasCreate">Añadir nueva</button>
 <table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
     <tr>
         <td>Hora</td>
@@ -11,13 +10,42 @@
         <th>Domingo</th>
     </tr>
     <tr ng-repeat="franja in franjas">
-        <th>{{franja| date:'h:mm a'}}</th>
-        <td id="{franja.$index}-0"><span uk-icon="icon: check" ng-show="hayCita(franja, 0)" ui-sref="horaDetail({horaId: darIdHora(franja, 0)})"></span></td>
-        <td id="{franja.$index}-1"><button uk-icon="icon: check" ng-show="hayCita(franja, 1)" ui-sref="horaDetail({horaId: darIdHora(franja, 1)})"></button></td>
-        <td id="{franja.$index}-2"><button uk-icon="icon: check" ng-show="hayCita(franja, 2)" ui-sref="horaDetail({horaId: darIdHora(franja, 2)})"></button></td>
-        <td id="{franja.$index}-3"><button uk-icon="icon: check" ng-show="hayCita(franja, 3)" ui-sref="horaDetail({horaId: darIdHora(franja, 3)})"></button></td>
-        <td id="{franja.$index}-4"><button uk-icon="icon: check" ng-show="hayCita(franja, 4)" ui-sref="horaDetail({horaId: darIdHora(franja, 4)})"></button></td>
-        <td id="{franja.$index}-5"><button uk-icon="icon: check" ng-show="hayCita(franja, 5)" ui-sref="horaDetail({horaId: darIdHora(franja, 5)})"></button></td>
-        <td id="{franja.$index}-6"><button uk-icon="icon: check" ng-show="hayCita(franja, 6)" ui-sref="horaDetail({horaId: darIdHora(franja, 6)})"></button></td>
+        <th>{{franja| date:'h:mm'}}</th>
+        <td ng-if="hayCita(franja, 0)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 0)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 0)" ui-sref="horasCreate({hora: franja, dia: 0})"></td>
+
+        <td ng-if="hayCita(franja, 1)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 1)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 1)" ui-sref="horasCreate({hora: franja, dia: 1})"></td>
+
+        <td ng-if="hayCita(franja, 2)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 2)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 2)" ui-sref="horasCreate({hora: franja, dia: 2})"></td>
+
+        <td ng-if="hayCita(franja, 3)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 3)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 3)" ui-sref="horasCreate({hora: franja, dia: 3})"></td>
+
+        <td ng-if="hayCita(franja, 4)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 4)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 4)" ui-sref="horasCreate({hora: franja, dia: 4})"></td>
+
+        <td ng-if="hayCita(franja, 5)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 5)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 5)" ui-sref="horasCreate({hora: franja, dia: 5})"></td>
+
+        <td ng-if="hayCita(franja, 6)">
+            <span uk-icon="icon: check" ui-sref="horaDetail({horaId: darIdHora(franja, 6)})"></span>
+        </td>
+        <td ng-if="!hayCita(franja, 6)" ui-sref="horasCreate({hora: franja, dia: 6})"></td>
+
+            
     </tr>
 </table>
