--- a/especialistas-web/src/main/webapp/src/modules/citas/create/citas.create.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/create/citas.create.html
@@ -4,6 +4,15 @@
         <label for="comentarios">Comentarios</label>
         <input class="form-control uk-input" id="hospitalName" required ng-model="comentarios" placeholder="Ingrese los comentarios">
     </div>
+    <br>
+    <div class="form-group">
+        <label for="especializacionMedico">Especialización</label>
+        <select class="form-control uk-input" id="especializacionMedico" required ng-model="especializacionMedico" >
+            <option ng-repeat="especializacion in especializaciones">{{especializacion.value}}</option>
+        </select>
+    </div>
+    
+    <br>
     <div class="form-group">
         <label for="horaNueva">Hora</label>
         <select class="form-control uk-input" id="horaNueva" required ng-model="horaNueva">
@@ -14,7 +23,7 @@
     <div class="uk-button-group">
         <button ng-show="cita.$valid" type="submit" class="uk-button uk-button-secondary" id="butGuardar">Guardar</button>
         <button type="reset" class="uk-button uk-button-secondary" id="butReset">Reiniciar</button>
-        <button type="button"  class="uk-button uk-button-default" ui-sref="citasList" id="butCancelar">Cancelar</button>
+        <button type="button"  class="uk-button uk-button-default" ui-sref="usuarioDetail({usuarioId:idUser})" id="butCancelar">Cancelar</button>
         
     </div>
 
