--- a/especialistas-web/src/main/webapp/src/modules/citas/update/citas.update.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/update/citas.update.html
@@ -17,8 +17,9 @@
                             <strong>Atención!</strong><p>Todos los campos son obligatorios</p>
                         </div> 
                     </div>
+                    <br>
                     <div class="uk-button-group">
-                        <button ng-if="!edit" class="uk-button uk-button-default" ui-sref="citasList">Cancelar</button>
+                        <button class="uk-button uk-button-default" ui-sref="citasList">Cancelar</button>
                         <button ng-show="cita.$valid" type="submit" class="uk-button uk-button-secondary">Guardar</button>
                     </div>
                 </form>
