--- a/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
+++ b/especialistas-web/src/main/webapp/src/modules/laboratorios/laboratorios.detail.html
@@ -1,8 +1,9 @@
 <div class="row">
     <div class="col-md-3">
         <img height="200px" width="200px" 
-             src="http://cdn.onlinewebfonts.com/svg/img_463148.png"
+             src="http://cdn.onlinewebfonts.com/svg/img_463148.png">
     </div>
+    <br>
     <div class="col-md-9">
         <div class="row">
             <h3>NOMBRE: </h3>{{laboratorioActual.nombre}}
@@ -12,7 +13,7 @@
             <h3>LATITUD: </h3>{{laboratorioActual.ubicacion.latitud}}
 
             <h3>LONGITUD: </h3>{{laboratorioActual.ubicacion.longitud}}
-
+        </div>
             <h3>EXÁMENES</h3>
             <table  class="table table-condensed">
                 <thead>
