--- a/especialistas-web/src/main/webapp/src/modules/citas/citas.html
+++ b/especialistas-web/src/main/webapp/src/modules/citas/citas.html
@@ -1,5 +1,4 @@
-<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="closeAlert()">{{alert.msg}} </alert>
-<div class="container-fluid">
+<div class="uk-width-1-1">
     <div class="row">
         <div ui-view="detailView"></div>
     </div>
