--- a/especialistas-web/src/main/webapp/src/modules/pagos/pagos.pagar.html
+++ b/especialistas-web/src/main/webapp/src/modules/pagos/pagos.pagar.html
@@ -11,5 +11,5 @@
   <input name="responseUrl"    type="hidden"  value="http://www.test.com/response" >
   <input name="confirmationUrl"    type="hidden"  value="http://proyectoseneca.esy.es/confirmation.php" >
 
-  <input type="submit">
+  <input type="submit" class="uk-button uk-button-secondary">
 </form>
