--- a/especialistas-web/src/main/webapp/src/modules/horas/horas.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/horas.html
@@ -1,4 +1,2 @@
-<div class="container-fluid">
-    <div ui-view="detailView"></div>
-    <div ui-view="listView"></div>
-</div>
+<div uk-width-1-1 ui-view="detailView"></div>
+<div uk-width-1-1 ui-view="listView"></div>
