--- a/especialistas-web/src/main/webapp/src/modules/horas/horas.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/horas.list.html
@@ -1,4 +1,4 @@
-<table class="uk-table uk-table-small uk-table-hover uk-table-divider uk-width-1-1 uk-card uk-card-default">
+<table class="uk-table uk-table-divider uk-width-1-1 uk-card uk-card-default">
     <tr>
         <td>Hora</td>
         <th>Lunes</th>
