--- a/especialistas-web/src/main/webapp/src/modules/horas/horas.html
+++ b/especialistas-web/src/main/webapp/src/modules/horas/horas.html
@@ -1,2 +1,4 @@
-<div uk-width-1-1 ui-view="detailView"></div>
-<div uk-width-1-1 ui-view="listView"></div>
+<div uk-grid>
+    <div uk-width-1-1 ui-view="detailView"></div>
+    <div uk-width-1-1 ui-view="listView"></div>
+</div>
