--- a/especialistas-web/src/main/webapp/index.html
+++ b/especialistas-web/src/main/webapp/index.html
@@ -239,9 +239,7 @@
             </div>
 
             <!--NAV-->
-            <ul ncy-breadcrumb class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l" ng-show="tipoUser === 1">
-                
-            </ul>
+            <ul ncy-breadcrumb class="uk-breadcrumb navega uk-width-5-6@xl uk-width-3-4@l" ></ul>
 
         </div>
 
