--- a/especialistas-web/src/main/webapp/src/modules/consultorios/consultorios.list.html
+++ b/especialistas-web/src/main/webapp/src/modules/consultorios/consultorios.list.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div ng-show="tipoUser !== 1 && tipoUser !== 2"  class="container-fluid">
     <div class="col-md-4">
         <table class="table table-striped">
             <thead>
@@ -13,14 +13,10 @@
                     <td id="{{$index}}-numero"><a ui-sref="consultorioDetail({consultorioId: consultorio.id})">{{consultorio.numero}}</a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-danger" ui-sref="consultorioDelete({consultorioId: consultorio.id})">
-                            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
-                        </button>
+                        <a href="#" uk-icon="icon: trash" style="color: #f44" ui-sref="consultorioUpdate({consultorioId: consultorio.id})"></a>
                     </td>
                     <td>
-                        <button type="button" class="btn btn-info" ui-sref="consultorioUpdate({consultorioId: consultorio.id})">
-                            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                        </button>
+                        <a href="#"  uk-icon="icon: pencil" style="color: #44b3ee" ui-sref="examenUpdate({examenId: examen.id})"></a>
                     </td>
                 </tr>
                 <tr>
@@ -28,6 +24,23 @@
                         <button type="button" class="btn btn-success" ui-sref="consultoriosCreate">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true" ></span>
                         </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
+<div ng-show="tipoUser !== 3" class="container-fluid">
+    <div class="col-md-4">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th>NÚMERO</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="consultorio in consultoriosRecords">
+                    <td id="{{$index}}-numero"><a ui-sref="consultorioDetail({consultorioId: consultorio.id})">{{consultorio.numero}}</a>
                     </td>
                 </tr>
             </tbody>
